Adds go build hook yml reference

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,9 @@
+-   id: go-build
+    name: 'go build'
+    entry: run-go-build.sh
+    files: '\.go$'
+    language: 'script'
+    description: "Runs `go build`, requires golang"
 -   id: go-fmt
     name: 'go fmt'
     entry: run-go-fmt.sh
