Adds README entries etc

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,9 +1,3 @@
--   id: go-build
-    name: 'go build'
-    entry: run-go-build.sh
-    files: '\.go$'
-    language: 'script'
-    description: "Runs `go build`, requires golang"
 -   id: go-fmt
     name: 'go fmt'
     entry: run-go-fmt.sh
@@ -61,3 +55,9 @@
     files: '\.go$'
     language: 'script'
     description: "Runs `go test`"
+-   id: go-build
+    name: 'go-build'
+    entry: run-go-build.sh
+    files: '\.go$'
+    language: 'script'
+    description: "Runs `go build`, requires golang"    
