--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 -   repo: git://github.com/pre-commit/pre-commit-hooks
-    sha: v0.7.1
+    rev: v0.7.1
     hooks:
       -   id: check-merge-conflict
       -   id: check-yaml
