golangci-lint: update invocation
update the invocation of golangci-lint to not spawn multiple
redundant copies per cpu since it handles its own concurrency.

also, by using "$@" users can pass their own arguments in their
repository's .pre-commit-config.yaml, e.g. to add `args: ['--fix',
'--fast', '--new']` to enable the fast linter preset, only run on
newly-modified files, and fix problems as they arise, if the linter
supports it

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -40,8 +40,9 @@
 -   id: golangci-lint
     name: 'golangci-lint'
     entry: run-golangci-lint.sh
-    files: '\.go$'
+    types: [go]
     language: 'script'
+    pass_filenames: false
     description: "Runs `golangci-lint`, requires https://github.com/golangci/golangci-lint"
 -   id: go-critic
     name: 'go-critic'
