Implement go mod tidy script
Useful to check if:

* Some packages are not required
* Some package needs to be updated

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -75,3 +75,9 @@
     files: '\.go$'
     language: 'script'
     description: "Runs `go build`, requires golang"
+-   id: go-mod-tidy
+    name: 'go-mod-tidy'
+    entry: run-go-mod-tidy.sh
+    files: '\.go$'
+    language: 'script'
+    description: "Runs `go mod tidy -v`, requires golang"
