feat: add go-mod-vendor hook
* Add a hook that runs `go mod vendor` to ensure that vendored
dependencies are up-to-date

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -81,3 +81,9 @@
     files: '\.go$'
     language: 'script'
     description: "Runs `go mod tidy -v`, requires golang"
+-   id: go-mod-vendor
+    name: 'go-mod-vendor'
+    entry: run-go-mod-vendor.sh
+    files: '\.go$'
+    language: 'script'
+    description: "Runs `go mod vendor`, requires golang"
