--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,10 @@
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v0.7.1
+repos:
+  - repo: https://github.com/jessp01/pre-commit-golang.git
+    rev: v0.5.3
     hooks:
-      -   id: check-merge-conflict
-      -   id: check-yaml
-      -   id: end-of-file-fixer
-      -   id: trailing-whitespace
+      - id: go-fmt
+      - id: go-imports
+      - id: go-vet
+      - id: go-lint
+      - id: go-critic
+      - id: go-ineffassign
